OpenLGTV BCM: improve 'run' option in WebUI
git-svn-id: http://svn.openlgtv.org.ru@1019 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -16,6 +16,7 @@ OpenLGTV BCM Changelog
     * FIX: few partition mounts on SmartTV models
     * FIX: rc.usb make actions on hotplug concurrently on each partitions when multiple partitions get found
     * FIX: file not found (404) error web page to handle possible problems when file accessed on network share is not achievable (common from not enough permissions)
+    * FIX: improve 'run' command in WebUI - make it fit the screen, even when output is big, enable scrolling with channel up/down buttons
     * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
     * ADD: FileManager: button to view last status of copy/move action after action was detached to background
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
