--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -2,7 +2,7 @@
 
 OpenLGTV BCM Changelog
 
-0.5.0-??? [NOT RELEASED YET]:
+0.5.0-beta4 [NOT RELEASED YET]:
     * FIX: FileManager: copy/move/erase actions when mouse was used for file/dir navigation
     * FIX: FileManager: better handling of dirs with special characters
     * FIX: FileManager: get rid of 'awk' in free/total space counting and proper handle 'df' multiline output for space info
@@ -19,6 +19,7 @@ OpenLGTV BCM Changelog
     * FIX: file not found (404) error web page to handle possible problems when file accessed on network share is not achievable (common from not enough permissions)
     * FIX: improve 'run' command in WebUI - make it fit the screen, even when output is big, enable scrolling with channel up/down buttons
     * FIX: navigation to handle up to 10 network shares settings WebUI
+    * FIX: follow symlinks when searching for executable scripts in /mnt/user/etc/init.d/
     * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
     * ADD: FileManager: button to view last status of copy/move action after action was detached to background
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
@@ -32,6 +33,10 @@ OpenLGTV BCM Changelog
     * ADD: experimental opkg packages support on extroot (with default OpenWRT Kamikaze 8.09.2 packages repository until we'll make our own repository)
     * ADD: get back previously removed tools + few more added (curl, ltrace, strace, tcpdump, top, opkg, msdl, e2fsck, ntfsprogs) into extroot dir in addons
     * ADD: one more field into ndrvtab/Network Shares config - how many ARP pings should be sent/received before trying to mount NFS/CIFS share
+    * ADD: support for OpenLGTV_BCM/etc/poweroff.d (on USB), /tmp/extroot/etc/poweroff.d, /mnt/user/etc/poweroff.d and /etc/poweroff.d dirs with scripts to execute at poweroff
+    * ADD: support for etc/init.d and etc/poweroff.d dirs on extroot with scripts to be executed at init and poweroff
+    * ADD: support for extroot on NFS and CIFS shares - just need to use /tmp/extroot as mountpoint
+    * ADD: support for web content on extroot via /var/www/extroot symlink to /tmp/extroot/var/www
     * UPDATE: OPENRELEASE upgrade to version 2.1.2-15-gf8f2743
     * UPDATE: ntfs-3g upgrade to version 2012.1.15
     * UPDATE: tmux upgrade from 1.5 to 1.6
@@ -46,6 +51,7 @@ OpenLGTV BCM Changelog
     * CHANGE: split part of rcS code into rc.userdirs, rc.passwd and rc.ssh as preparation for chrooted services usability for installer
     * CHANGE: replace ntfs-3g binary with lowntfs-3g with FUSE low-level interface instructions
     * CHANGE: rc.mount-netshare is called now as early as network and telnet/ssh got started - it now try to get ARP reply first via arping before it try to mount CIFS/NFS share
+    * CHANGE: /mnt/user/init.d is moved to /mnt/user/etc/init.d now
     * REMOVE: mtdinfo.sh for space reason - it's code is in info.sh already
     * REMOVE: chrt and chat binaries from SmartTV image for space reason - use BusyBox applets instead
     * REMOVE: libmagic.so as it wasn't used now since 'file' was removed
