OpenLGTV BCM: imdb.sh script to find and generate movie info image
git-svn-id: http://svn.openlgtv.org.ru@1025 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -37,6 +37,7 @@ OpenLGTV BCM Changelog
     * ADD: support for etc/init.d and etc/poweroff.d dirs on extroot with scripts to be executed at init and poweroff
     * ADD: support for extroot on NFS and CIFS shares - just need to use /tmp/extroot as mountpoint
     * ADD: support for web content on extroot via /var/www/extroot symlink to /tmp/extroot/var/www
+    * ADD: imdb.sh script to generate image with movie info based on IMDB data (will get bound to FileManager soon)
     * UPDATE: OPENRELEASE upgrade to version 2.1.2-15-gf8f2743
     * UPDATE: ntfs-3g upgrade to version 2012.1.15
     * UPDATE: tmux upgrade from 1.5 to 1.6
