OpenLGTV BCM: send_key.sh script
git-svn-id: http://svn.openlgtv.org.ru@1027 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -38,6 +38,7 @@ OpenLGTV BCM Changelog
     * ADD: support for extroot on NFS and CIFS shares - just need to use /tmp/extroot as mountpoint
     * ADD: support for web content on extroot via /var/www/extroot symlink to /tmp/extroot/var/www
     * ADD: imdb.sh script to generate image with movie info based on IMDB data (will get bound to FileManager soon)
+    * ADD: send_key.sh script to pass button key codes to (OPEN)RELEASE, with support for key combinations
     * UPDATE: OPENRELEASE upgrade to version 2.1.2-15-gf8f2743
     * UPDATE: ntfs-3g upgrade to version 2012.1.15
     * UPDATE: tmux upgrade from 1.5 to 1.6
