OpenLGTV BCM: fix rc.poweroff and highlight mounted network shares on the list in webui
git-svn-id: http://svn.openlgtv.org.ru@1031 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -57,6 +57,7 @@ OpenLGTV BCM Changelog
     * CHANGE: replace ntfs-3g binary with lowntfs-3g with FUSE low-level interface instructions
     * CHANGE: rc.mount-netshare is called now as early as network and telnet/ssh got started - it now try to get ARP reply first via arping before it try to mount CIFS/NFS share
     * CHANGE: /mnt/user/init.d is moved to /mnt/user/etc/init.d now
+    * CHANGE: mounted shares are now highlighted on Network Shares list in WebUI
     * REMOVE: mtdinfo.sh for space reason - it's code is in info.sh already
     * REMOVE: chrt and chat binaries from SmartTV image for space reason - use BusyBox applets instead
     * REMOVE: libmagic.so as it wasn't used now since 'file' was removed
