OpenLGTV BCM: minor update for FileManager Movie Info
git-svn-id: http://svn.openlgtv.org.ru@1039 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -6,8 +6,10 @@ TODO:
     * FileManager: make slideshow completely smooth
     * FileManager: handle Movie Info under OK button or find other button for it
     * add Network Shares options field in WebUI to tune performance and compatibility
+    * poweroff scripts to 1. kill all processes, 2. security check, 3. save history/append log, 4. unmount/remount still mounted writable partitions
     * update and test scripts chrooted on SmartTV models
     * prepare some useful packages (any propositions?) in repository and disable OpenWRT repository by default
+    * ?
 
 0.5.0-beta4 [NOT RELEASED YET]:
     * FIX: FileManager: copy/move/erase actions when mouse was used for file/dir navigation
