OpenLGTV BCM: FileManager fixes/improvements for photo slideshow
git-svn-id: http://svn.openlgtv.org.ru@1040 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -3,8 +3,9 @@
 OpenLGTV BCM Changelog
 
 TODO:
-    * FileManager: make slideshow completely smooth
+    * FileManager: make slideshow completely smooth, allow pause and back+forward actions
     * FileManager: handle Movie Info under OK button or find other button for it
+    * FileManager: make option to save and restore last panel paths and selection
     * add Network Shares options field in WebUI to tune performance and compatibility
     * poweroff scripts to 1. kill all processes, 2. security check, 3. save history/append log, 4. unmount/remount still mounted writable partitions
     * update and test scripts chrooted on SmartTV models
