OpenLGTV BCM: add few tools to extroot, todo in changelog update
git-svn-id: http://svn.openlgtv.org.ru@1041 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -7,8 +7,10 @@ TODO:
     * FileManager: handle Movie Info under OK button or find other button for it
     * FileManager: make option to save and restore last panel paths and selection
     * add Network Shares options field in WebUI to tune performance and compatibility
+    * make IP to MAC resolving in Ether Wake in WebUI
     * poweroff scripts to 1. kill all processes, 2. security check, 3. save history/append log, 4. unmount/remount still mounted writable partitions
     * update and test scripts chrooted on SmartTV models
+    * add some more NetCast services
     * prepare some useful packages (any propositions?) in repository and disable OpenWRT repository by default
     * ?
 
