OpenLGTV BCM: changelog update
git-svn-id: http://svn.openlgtv.org.ru@1042 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -12,6 +12,7 @@ TODO:
     * update and test scripts chrooted on SmartTV models
     * add some more NetCast services
     * prepare some useful packages (any propositions?) in repository and disable OpenWRT repository by default
+    * upgrade uClibc?
     * ?
 
 0.5.0-beta4 [NOT RELEASED YET]:
