OpenLGTV BCM: FileManager: IMDB Movie Info display improvement, minor scripts cleanup
git-svn-id: http://svn.openlgtv.org.ru@1043 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -10,6 +10,7 @@ TODO:
     * make IP to MAC resolving in Ether Wake in WebUI
     * poweroff scripts to 1. kill all processes, 2. security check, 3. save history/append log, 4. unmount/remount still mounted writable partitions
     * update and test scripts chrooted on SmartTV models
+    * enable YWE in North American models outside of USA
     * add some more NetCast services
     * prepare some useful packages (any propositions?) in repository and disable OpenWRT repository by default
     * upgrade uClibc?
