--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -4,8 +4,8 @@ OpenLGTV BCM Changelog
 
 TODO:
     * FileManager: make slideshow completely smooth, allow pause and back+forward actions
-    * FileManager: handle Movie Info under OK button or find other button for it
-    * FileManager: make option to save and restore last panel paths and selection
+    * FileManager: M3U handler needs support for remote links (http://, udp://, rtp:// - with using udpxy when needed)
+    * FileManager: handle Movie Info under OK button?
     * add Network Shares options field in WebUI to tune performance and compatibility
     * add upper/lower case switching button in WebUI, Internet Browser and FileManager
     * poweroff scripts to 1. kill all processes, 2. security check, 3. save history/append log, 4. unmount/remount still mounted writable partitions
@@ -41,6 +41,8 @@ TODO:
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
     * ADD: FileManager: remaining time counter for copy/move progress status
     * ADD: FileManager: support for FLV and F4V files on Korean models
+    * ADD: FileManager: restore last panel paths and selection with type=restore_last option in URL
+    * ADD: FileManager: IMDB MovieInfo option on 'INFO' button (alternative is '1' button)
     * ADD: /mnt/usb{1,2}/Drive{7,8} and /mnt/usb{1,2}/NetShare mount points
     * ADD: continous playback feature to Yavido alternative
     * ADD: /mnt/lg/widevine and /mnt/lg/res/cert mount points from SmartTV models to make successful chrooting of installer image on SmartTV models
