--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -4,11 +4,10 @@ OpenLGTV BCM Changelog
 
 TODO:
     * FileManager: make slideshow completely smooth, allow pause and back+forward actions
-    * FileManager: M3U handler needs support for remote links (http://, udp://, rtp:// - with using udpxy when needed)
-    * FileManager: handle Movie Info under OK button?
     * add Network Shares options field in WebUI to tune performance and compatibility
     * add upper/lower case switching button in WebUI, Internet Browser and FileManager
     * poweroff scripts to 1. kill all processes, 2. security check, 3. save history/append log, 4. unmount/remount still mounted writable partitions
+    * udpxy integration for udp:// and rtp:// links
     * update and test scripts chrooted on SmartTV models
     * enable YWE in North American models outside of USA
     * add some more NetCast services
@@ -36,6 +35,7 @@ TODO:
     * FIX: navigation to handle up to 10 network shares settings WebUI
     * FIX: follow symlinks when searching for executable scripts in /mnt/user/etc/init.d/
     * FIX: handling USB storage devices without any partitions
+    * FIX: M3U parser now supports both local (absolute and related) paths and network links
     * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
     * ADD: FileManager: button to view last status of copy/move action after action was detached to background
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
@@ -43,6 +43,7 @@ TODO:
     * ADD: FileManager: support for FLV and F4V files on Korean models
     * ADD: FileManager: restore last panel paths and selection with type=restore_last option in URL
     * ADD: FileManager: IMDB MovieInfo option on 'INFO' button (alternative is '1' button)
+    * ADD: FileManager: M3U and PLS playlist can be viewed (with track selection) through M3U parser with 'OK' button or played continuosly with 'Play' button
     * ADD: /mnt/usb{1,2}/Drive{7,8} and /mnt/usb{1,2}/NetShare mount points
     * ADD: continous playback feature to Yavido alternative
     * ADD: /mnt/lg/widevine and /mnt/lg/res/cert mount points from SmartTV models to make successful chrooting of installer image on SmartTV models
