OpenLGTV BCM: Internet Browser: all options - calling typed URL, search or bookmarks now call builtin web browser to show the same result as on PC when accessed remotely
git-svn-id: http://svn.openlgtv.org.ru@1051 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -61,6 +61,7 @@ TODO:
     * ADD: hid-sunplus.ko kernel module for some USB wireless keyboard+mouse combo devices
     * ADD: updxy to handle udp:// streams in extroot
     * ADD: upper/lower case switch in WebUI, Internet Browser and FileManager on Pause button press
+    * ADD: Internet Browser accessed remotely now calls builtin web browser to show search results, written URL or choosen bookmark on TV screen together with web browser running remotely
     * UPDATE: OPENRELEASE upgrade to version 2.1.2-15-gf8f2743
     * UPDATE: ntfs-3g upgrade to version 2012.1.15
     * UPDATE: tmux upgrade from 1.5 to 1.6
