--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -4,14 +4,18 @@ OpenLGTV BCM Changelog
 
 TODO:
     * FileManager: make slideshow completely smooth, allow pause and back+forward actions
+    * FileManager: add subtitles loading and audio tracks change possibility in played videos
     * insert characters in cursor position in WebUI, Internet Browser and FileManager dialogs, not always at the end of string
-    * add Network Shares options field in WebUI to tune performance and compatibility
+    * add Network Shares options field in WebUI to tune performance and compatibility - besides new field handling, needs to move some code from rc.mount-netshare to WebUI
     * poweroff scripts to 1. kill all processes, 2. security check, 3. save history/append log, 4. unmount/remount still mounted writable partitions
+    * update BusyBox to 1.19.4 (or newer) and backport few fixes from master, like "httpd: make byte ranges which start at 0 work too. Closes 4766" and "httpd: fix sendfile of files larger than 2 Gb. Closes 4754"
     * udpxy integration for udp:// and rtp:// links
+    * update mime-types in httpd.conf for support of more media file extensions
     * update and test scripts chrooted on SmartTV models
     * enable YWE in North American models outside of USA
     * add some more NetCast services
     * prepare some useful packages (any propositions?) in repository and disable OpenWRT repository by default
+    * bring back real e2fsck?
     * upgrade uClibc?
     * ?
 
