--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -11,9 +11,11 @@ TODO:
     * udpxy integration for udp:// and rtp:// links
     * update mime-types in httpd.conf for support of more media file extensions
     * update and test scripts chrooted on SmartTV models
-    * enable YWE in North American models outside of USA
+    * enable YWE in North American models outside of USA (Canada, Mexico)
     * add some more NetCast services
+    * add support for Debian running from USB storage
     * compile gpgme, add public key, prepare some useful (signed) packages (any propositions?) in repository and disable OpenWRT repository by default
+    * storage for Yahoo Widgets in some NAND flash partitions? some backup partitions?
     * bring back real e2fsck?
     * upgrade uClibc?
     * ?
