OpenLGTV BCM: new icons upload
git-svn-id: http://svn.openlgtv.org.ru@1059 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -70,6 +70,7 @@ TODO:
     * ADD: poweroff scripts to 1. kill all processes that are using USB storage devices, 2. unmount/remount read-only USB storage devices with all used mountpoints, 3. ...
     * ADD: support for gzipped kernel modules
     * ADD: support for custom kernel modules list and additional modules to be loaded from extroot or USB storage
+    * ADD: additional NetCast services and updated links
     * UPDATE: OPENRELEASE upgrade to version 2.1.2-15-gf8f2743
     * UPDATE: ntfs-3g upgrade to version 2012.1.15
     * UPDATE: tmux upgrade from 1.5 to 1.6
