OpenLGTV BCM: tv_p rewrite to handle more media than only tv series
git-svn-id: http://svn.openlgtv.org.ru@1068 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -73,6 +73,7 @@ TODO:
     * ADD: support for gzipped kernel modules
     * ADD: support for custom kernel modules list and additional modules to be loaded from extroot or USB storage
     * ADD: additional NetCast services and updated links
+    * ADD: improvements to vod services
     * UPDATE: OPENRELEASE upgrade to version 2.1.2-15-gf8f2743
     * UPDATE: ntfs-3g upgrade to version 2012.1.15
     * UPDATE: tmux upgrade from 1.5 to 1.6
