OpenLGTV BCM: few more things on TODO list in changelog
git-svn-id: http://svn.openlgtv.org.ru@1069 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -6,6 +6,8 @@ TODO:
     * FileManager: make slideshow completely smooth, allow pause and back+forward actions
     * FileManager: add subtitles loading and audio tracks change possibility in played videos
     * FileManager: ensure that workarounds for the problem with pages loaded twice at the same time is made everywhere
+    * FileManager: add check mark to select multiple files/dirs and handle that in copy/move/delete/play (?)
+    * FileManager: add command line or command window (?)
     * insert characters in cursor position in WebUI, Internet Browser and FileManager dialogs, not always at the end of string
     * add Network Shares options field in WebUI to tune performance and compatibility - besides new field handling, needs to move some code from rc.mount-netshare to WebUI
     * update BusyBox to 1.19.4 (or newer) and backport few fixes from master, like "httpd: make byte ranges which start at 0 work too. Closes 4766" and "httpd: fix sendfile of files larger than 2 Gb. Closes 4754"
@@ -13,6 +15,7 @@ TODO:
     * update mime-types in httpd.conf for support of more media file extensions
     * update and test scripts chrooted on SmartTV models
     * enable YWE in North American models outside of USA (Canada, Mexico)
+    * find a way for OPENRELEASE configs upgrade when currently used ones were already customized
     * add some more NetCast services
     * add support for Debian running from USB storage
     * compile gpgme, add public key, prepare some useful (signed) packages (any propositions?) in repository and disable OpenWRT repository by default
