OpenLGTV BCM: FileManager: pause/resume and backward/forward actions handling in image slideshow, some code optimization
git-svn-id: http://svn.openlgtv.org.ru@1078 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -3,9 +3,8 @@
 OpenLGTV BCM Changelog
 
 TODO:
-    * FileManager: make slideshow completely smooth, allow pause and back+forward actions
-    * FileManager: add subtitles loading and audio tracks change possibility in played videos
-    * FileManager: ensure that workarounds for the problem with pages loaded twice at the same time is made everywhere
+    * FileManager: add upload button (on remote access only) to make it possible to upload files via http to any paths
+    * FileManager: add subtitles loading and audio tracks change possibility in played videos (?)
     * FileManager: add check mark to select multiple files/dirs and handle that in copy/move/delete/play (?)
     * FileManager: add command line or command window (?)
     * insert characters in cursor position in WebUI, Internet Browser and FileManager dialogs, not always at the end of string
@@ -54,6 +53,7 @@ TODO:
     * ADD: FileManager: restore last panel paths and selection with type=restore_last option in URL
     * ADD: FileManager: IMDB MovieInfo option on 'INFO' button (alternative is '1' button)
     * ADD: FileManager: M3U and PLS playlist can be viewed (with track selection) through M3U parser with 'OK' button or played continuosly with 'Play' button
+    * ADD: FileManager: handle pause/resume and backward/forward actions for (image) slideshow
     * ADD: /mnt/usb{1,2}/Drive{7,8} and /mnt/usb{1,2}/NetShare mount points
     * ADD: continous playback feature to Yavido alternative
     * ADD: /mnt/lg/widevine and /mnt/lg/res/cert mount points from SmartTV models to make successful chrooting of installer image on SmartTV models
