OpenLGTV BCM: FileManager: make image/photo slideshow more responsive for buttons keyevents
git-svn-id: http://svn.openlgtv.org.ru@1079 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -15,6 +15,7 @@ TODO:
     * enable YWE in North American models outside of USA (Canada, Mexico)
     * find a way for OPENRELEASE configs upgrade when currently used ones were already customized
     * add some more NetCast services
+    * more improvements to NetPlayer alternative parser
     * add support for Debian running from USB storage
     * compile gpgme, add public key, prepare some useful (signed) packages (any propositions?) in repository and disable OpenWRT repository by default
     * storage for Yahoo Widgets in some NAND flash partitions? some backup partitions?
@@ -45,6 +46,7 @@ TODO:
     * FIX: handling USB storage devices without any partitions
     * FIX: M3U parser now supports both local (absolute and related) paths and network links
     * FIX: WebUI -> 'Network Shares' -> 'Add Share' doesn't fill fields with previous item
+    * FIX: NetPlayer alternative better start page and improved parser (performance, visibility and compatibility)
     * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
     * ADD: FileManager: button to view last status of copy/move action after action was detached to background
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
