OpenLGTV BCM: OPENRELEASE clean shutdown check at upgrade and after enabling it
git-svn-id: http://svn.openlgtv.org.ru@1080 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -80,6 +80,7 @@ TODO:
     * ADD: additional NetCast services and updated links
     * ADD: improvements to vod services
     * ADD: 'Options' field in WebUI -> Network Shares to tune performance/compatibility
+    * ADD: OPENRELEASE crash detection - it will get disabled on next boot (after upgrade or enabling it) if unclean shutdown will be detected
     * UPDATE: OPENRELEASE upgrade to version 2.1.2-15-gf8f2743
     * UPDATE: ntfs-3g upgrade to version 2012.1.15
     * UPDATE: tmux upgrade from 1.5 to 1.6
