OpenLGTV BCM: OPENRELEASE upgrade to 2.1.2-16-g5414057
git-svn-id: http://svn.openlgtv.org.ru@1082 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -81,7 +81,7 @@ TODO:
     * ADD: improvements to vod services
     * ADD: 'Options' field in WebUI -> Network Shares to tune performance/compatibility
     * ADD: OPENRELEASE crash detection - it will get disabled on next boot (after upgrade or enabling it) if unclean shutdown will be detected
-    * UPDATE: OPENRELEASE upgrade to version 2.1.2-15-gf8f2743
+    * UPDATE: OPENRELEASE upgrade to version 2.1.2-16-g5414057
     * UPDATE: ntfs-3g upgrade to version 2012.1.15
     * UPDATE: tmux upgrade from 1.5 to 1.6
     * UPDATE: dropbear SSH server upgrade from 0.53.1 to 2012.55, with scp progress bar compiled in, updated paths, lowered unauth retries for DoS prevention, and security fix for CVE-2012-0920
