OpenLGTV BCM: 'NetPlayer alternative' renamed to 'RSS parser' with support for some more RSS types and columns/rows formating
git-svn-id: http://svn.openlgtv.org.ru@1088 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
+++ b/OpenLGTV_BCM/trunk/OpenLGTV_BCM-src/var/www/browser/links.html
@@ -105,7 +105,7 @@ document.defaultAction = true;
 	<td align="center"><a id="c1" onKeyPress="javascript:setCurrent(this);return false" href='../vod/ipla.cgi' target='_parent'><img src="Images/tmp/iplapl.png" border=2></a></td>
 	<td align="center"><a id="c2" onKeyPress="javascript:setCurrent(this);return false" href='../vod/tvp.cgi' target='_parent'><img src="Images/tmp/tvppl.png" border=2></a></td>
 	<td align="center"><a id="c3" onKeyPress="javascript:setCurrent(this);return false" href='../vod/yavido.cgi' target='_parent'><img src="Images/tmp/yavido.png" border=2></a></td>
-	<td align="center"><a id="c4" onKeyPress="javascript:setCurrent(this);return false" href='../vod/netplayer.cgi' target='_parent'><font size="+2" color='#FFFFFF'>NetPlayer alternative</font></a></td>
+	<td align="center"><a id="c4" onKeyPress="javascript:setCurrent(this);return false" href='../vod/rss.cgi' target='_parent'><font size="+2" color='#FFFFFF'>RSS parser</font></a></td>
 	<!-- td align="center"><a id="c4" onKeyPress="javascript:setCurrent(this);return false" href='../browser.cgi' target='_parent'><font size="+2" color='#FFFFFF'>Internet Browser</font></a></td -->
 	<td align="center"><a id="c5" onKeyPress="javascript:setCurrent(this);return false" href='http://api.video.sina.com.cn/lg/' target='_parent'><img src="Images/tmp/Sina.gif" border=2></a></td>
 	<td align="center"><a id="c6" onKeyPress="javascript:setCurrent(this);return false" href='http://tvlg.globo.com/' target='_parent'><img src="Images/tmp/globocom.gif" border=2></a></td>
