--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -16,7 +16,7 @@ TODO:
     * enable YWE in North American models outside of USA (Canada, Mexico)
     * find a way for OPENRELEASE configs upgrade when currently used ones were already customized
     * add some more NetCast services
-    * more improvements to NetPlayer alternative parser
+    * more improvements to RSS parser
     * add support for Debian running from USB storage
     * compile gpgme, add public key, prepare some useful (signed) packages (any propositions?) in repository and disable OpenWRT repository by default
     * storage for Yahoo Widgets in some NAND flash partitions? some backup partitions?
@@ -102,6 +102,7 @@ TODO:
     * CHANGE: make hostname/IP to MAC resolving in Ether Wake in WebUI after pressing Save button if MAC was not specified
     * CHANGE: change Pause button action to Stop button in Internet Browser for NetCast links
     * CHANGE: modules.custom file name has changed to modules.list now
+    * CHANGE: NetPlayer alternative is now renamed to RSS parser with support for more RSS-like formats
     * REMOVE: mtdinfo.sh for space reason - it's code is in info.sh already
     * REMOVE: chrt and chat binaries from SmartTV image for space reason - use BusyBox applets instead
     * REMOVE: libmagic.so as it wasn't used now since 'file' was removed
